disallow-host-network/policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "disallow-host-network-policy-binding"
spec:
  policyName: "disallow-host-network-policy"
  validationActions: [Deny]
